Fixed text align

--- a/adv_js/week5/assignment/api_data/src/components/CurrentWeather/CurrentWeather.module.scss
+++ b/adv_js/week5/assignment/api_data/src/components/CurrentWeather/CurrentWeather.module.scss
@@ -1,50 +1,45 @@
-body{
-    width: 100%;
-    height: 100%;
-    background-color: #8fdbf0;
+body {
+  width: 100%;
+  height: 100%;
+  background-color: #8fdbf0;
 }
-.weatherCont{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0 auto;
-    margin-top: 120px;
-    background-color: #ffffff;
-    padding: 10px;
-    max-width: 900px;
-    border-radius: 30px;
-    box-shadow: 4px 4px 8px rgb(47, 47, 47);
+.weatherCont {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  margin-top: 120px;
+  background-color: #ffffff;
+  padding: 10px;
+  max-width: 900px;
+  border-radius: 30px;
+  box-shadow: 4px 4px 8px rgb(47, 47, 47);
+  text-align: left;
+  scroll-margin-top: 100px;
+
+  .headerCont {
+    display: inline-flex;
+  }
+  h2 {
+    padding-left: 20px;
+    padding-right: 80px;
+  }
+  .conditionCont {
     text-align: center;
-    scroll-margin-top: 100px;
-    
-    .headerCont{
-        display: inline-flex;
-        position: relative;
-        left: -20%;
-    }
-    h2{
-        text-align: left;
-        padding-right: 80px;
-        position: relative;
-        left: -4%;
-    }
-    .conditionCont{
-        text-align: center;
-        padding: 2px 0;
-        margin: 8px 0;
-        background-color: #dcfaff;
-        border-radius: 15px;
-        min-width: 120px;
-        min-height: 120px;
-        height: max-content;
-        width: max-content;
+    padding: 2px 0;
+    margin: 8px 0;
+    background-color: #dcfaff;
+    border-radius: 15px;
+    min-width: 120px;
+    min-height: 120px;
+    height: max-content;
+    width: max-content;
 
-        p{
-            margin: 6px 0;
-            padding: 0 25px;
-        }
+    p {
+      margin: 6px 0;
+      padding: 0 25px;
     }
-    img{
-        scale: 1.5;
-        padding-top: 6px;
-    }
+  }
+  img {
+    scale: 1.5;
+    padding-top: 6px;
+  }
 }
-
